--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-modal": "^3.0.1",
     "core-js": "^2.4.1",
+    "datatables.net": "^1.10.15",
+    "datatables.net-bs": "^1.10.15",
+    "datatables.net-select": "^1.2.2",
+    "datatables.net-select-bs": "^1.2.2",
+    "jquery": "^3.2.1",
+    "ng-lightning": "^1.3.0",
+    "ng2-cookies": "^1.0.12",
+    "ngx-bootstrap": "^1.8.1",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
@@ -31,6 +40,7 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.10",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
